# Changelog

## Alpha XXX (Not yet released)

* Aufgabe mit Wildschwein und Pizza hinzugefügt
* Bei "Zurück zum Hauptmenü" soll eine Nachfrage erfolgen
* Sprachausgabe (?)

## Alpha 005

* Aufgabe mit blutleerem Pferd hinzugefügt
* Weitere NPC-Tiere hinzugefügt
* Neuer Ladebildschirm
* Hauptmenü überarbeitet
* Autosave
* Regen-Effekt
* Beim ersten Start wird die Bildschirmauflösung des Systems übernommen

## Alpha 004

* Aufgabe mit Sprengstoff hinzugefügt
* Tretminen hinzugefügt
* Schwert hinzugefügt
* Tag-Nacht-Zyklus hinzugefügt
* Aktuelle Aufgabe wird jetzt angezeigt im Pausenmenü
* Grafik-Einstellungen feiner einstellbar
* Intro entfernt
* Maussteuerung entfernt
* Fehler im Handling der Tastatur-Events korrigiert
* Wenn man das Spiel pausiert, werden jetzt auch die Soundeffekte gestoppt

## Alpha 003

* Intro
* Aufgabe mit Zahlencode hinzugefügt
* Hunde KI verbessert
* Dekoration hinzugefügt

## Alpha 002

* Aufgabe mit Holzbrettern hinzugefügt
* Mehr Musik-Tracks
* Spielstände jetzt aufwärtskompatibel
* Experimentelle Maussteuerung
* Video-Einstellungen: Auflösungen kleiner als 640x480 entfernt
* Unterstützung für High DPI

## Alpha 001

* Erster öffentlicher Alpha Build