@@ -5,11 +5,21 @@ class Camera:
     """ Used to store top positions of screen """
 
     def __init__(self, x=0, y=0):
-        """Constructor"""
+        """
+        Constructor
+        @param x: left
+        @param y: top
+        """
         self.x = x
         self.y = y
 
     def update(self, x, y):
+        """
+        Update
+        @param x: left
+        @param y: top
+        """
+
         if x < 0:
             x = 0
 
@@ -19,9 +29,15 @@ class Camera:
         self.x, self.y = x, y
 
     def to_dict(self):
-        """ To dict """
-        return (self.x, self.y)
+        """
+        To dict
+        @return: dictionary
+        """
+        return self.x, self.y
 
     def to_list(self):
-        """ To list """
+        """
+        To list
+        @return: list
+        """
         return [self.x, self.y]
